--- a/Lesson 1/website.html
+++ b/Lesson 1/website.html
@@ -33,8 +33,8 @@
   <script>
 
     // this is a comment
-    // This code created a popup.
-    // alert('Hello');
+    // The next code creates a popup:
+    // alert('Hello'); (altough it is just a comment now)
 
     /*This
       is
